fix: register participants to event